# minicas

./: Cargo.toml  README.md
crates/minicas/: Cargo.toml
crates/minicas-core/: Cargo.toml
crates/minicas-core/src/: lib.rs  ty.rs
crates/minicas-core/src/ast/: ac_collect.rs  binary_node.rs  const_node.rs  fold.rs  mod.rs  node_binary.rs  node_unary.rs  parse.rs  rearrange.rs  typecheck.rs  unary_node.rs  variable_node.rs
crates/minicas-core/src/pred/: mod.rs
crates/minicas-core/src/rules/: mod.rs  pred_spec.rs
crates/minicas-crs/: Cargo.toml  build.rs
crates/minicas-crs/rules/: factoring.toml  rewrite_piecewise_and_abs.toml  rewrite_piecewise_max.toml  rewrite_piecewise_min.toml  simplify.toml  simplify_equivalence.toml
crates/minicas-crs/src/: lib.rs
crates/minicas/src/: lib.rs  path.rs
crates/minicas/src/ast/: ac_collect.rs  binary_node.rs  fold.rs  mod.rs  node_binary.rs  node_piecewise.rs  node_unary.rs  parse.rs  path.rs  rearrange.rs  typecheck.rs  unary_node.rs
crates/minicas/src/pred/: mod.rs
crates/minicas/src/rules/: mod.rs  pred_spec.rs
