[workspace]
members = ["crates/minicas-core", "crates/minicas-crs"]
resolver = "2"

[workspace.dependencies]
num-traits = { version = "^0.2", default-features = false }
num = { version = "^0.4" }
itertools = { version = "^0.14"}

nom = "8.0"
nom-language = "0.1.0"

toml = { version = "^0.8", features = ["parse"] }
serde = { version = "^1.0", features = ["derive"] }

# our crates
minicas-core = { version = "0.0.1", path = "crates/minicas-core" }