[package]
edition = "2021"
name = "minicas-crs"
version = "0.0.1"
license = "MIT OR Apache-2.0"

rust-version = "1.78"

[dependencies]
minicas-core.workspace = true
toml.workspace = true

lazy_static = "1.5"

[build-dependencies]
minicas-core.workspace = true
toml.workspace = true
serde.workspace = true